--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^5.14.2",
+    "classnames": "^2.5.1",
     "eslint-config-prettier": "^9.1.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
