--- a/package.json
+++ b/package.json
@@ -6,26 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "antd": "^5.14.2",
+    "better-sqlite3": "^9.4.3",
     "classnames": "^2.5.1",
-    "eslint-config-prettier": "^9.1.0",
+    "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
+    "postcss": "^8.4.35",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
