--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@types/mui-image": "^1.0.5",
     "antd": "^5.14.2",
+    "bcryptjs": "^2.4.3",
     "better-sqlite3": "^9.4.3",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.6",
+    "mongodb": "^6.3.0",
+    "mui-image": "^1.0.7",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "prettier": "^3.2.5",
