--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.525.0",
+    "@aws-sdk/hash-node": "^3.374.0",
+    "@aws-sdk/s3-request-presigner": "^3.525.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/mui-image": "^1.0.5",
+    "@types/next-auth": "^3.15.0",
     "antd": "^5.14.2",
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^9.4.3",
     "classnames": "^2.5.1",
@@ -26,6 +32,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-redux": "^9.1.0",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
